Make function ttestPeptides(). Modify processPeptides() for the ttestPeptides() data requirement.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_gravy_vs_intensity)
 export(plot_int)
 export(plot_length_distribution)
 export(processPeptides)
+export(ttestPeptides)
 import(data.table)
 import(ggplot2)
 import(ggpubr)
@@ -14,3 +15,5 @@ import(gridExtra)
 importFrom(cowplot,get_legend)
 importFrom(ggseqlogo,ggseqlogo)
 importFrom(scales,scientific_format)
+importFrom(stats,p.adjust)
+importFrom(stats,t.test)
