--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,11 @@ import(ggpubr)
 import(gridExtra)
 importFrom(cowplot,get_legend)
 importFrom(ggseqlogo,ggseqlogo)
+importFrom(limma,contrasts.fit)
+importFrom(limma,lmFit)
+importFrom(limma,makeContrasts)
+importFrom(limma,topTreat)
+importFrom(limma,treat)
 importFrom(scales,scientific_format)
 importFrom(stats,p.adjust)
 importFrom(stats,t.test)
