--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(plot_count)
 export(plot_gravy_vs_intensity)
 export(plot_int)
 export(plot_length_distribution)
+export(plot_volcano)
 export(processPeptides)
 export(ttestPeptides)
 import(data.table)
@@ -13,6 +14,7 @@ import(ggplot2)
 import(ggpubr)
 import(gridExtra)
 importFrom(cowplot,get_legend)
+importFrom(ggrepel,geom_text_repel)
 importFrom(ggseqlogo,ggseqlogo)
 importFrom(limma,contrasts.fit)
 importFrom(limma,lmFit)
