Change @import ggpubr to importFrom ggpubr theme_pubr, avoid warning with replacing get_legend by cowplot::get_legend.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,9 @@ export(processPeptides)
 export(ttestPeptides)
 import(data.table)
 import(ggplot2)
-import(ggpubr)
 import(gridExtra)
 importFrom(cowplot,get_legend)
+importFrom(ggpubr,theme_pubr)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggseqlogo,ggseqlogo)
 importFrom(limma,contrasts.fit)
