--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
       person("Qing", "Ren", email = "qing.ren@wur.nl", role = "aut")
     )
 Description: A collection of functions to process, analyze, and visualize peptidomics data.
-License: MIT + file LICENSE
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
