--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: peptidomicsR
 Type: Package
 Title: Tools for Peptidomics and Protein Digestion Analysis
-Version: 1.0.0-alpha
+Version: 1.0.0.9000
 Authors@R: 
     c(
       person("Xuchuan", "Ma", email = "xuchuan.ma@gmail.com", role = c("aut", "cre")),
