Address several small bugs and R CMD check issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,8 @@ importFrom(limma,makeContrasts)
 importFrom(limma,topTreat)
 importFrom(limma,treat)
 importFrom(scales,scientific_format)
+importFrom(stats,as.formula)
+importFrom(stats,model.matrix)
 importFrom(stats,p.adjust)
+importFrom(stats,setNames)
 importFrom(stats,t.test)
